--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myalarm" >
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.myalarm">
 
     <application
         android:allowBackup="true"
@@ -8,19 +9,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MyAlarm" >
+        android:theme="@style/Theme.MyAlarm">
+
         <activity
-            android:name=".LogInActivity"
-            android:exported="false" />
-        <activity
-            android:name=".TimerActicity"
+            android:name=".TimerActivity"
             android:exported="false" />
         <activity
             android:name=".StopWatchActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
-            android:exported="true" >
+            android:name=".AlarmActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LogInActivity"
+            android:exported="true"
+            tools:ignore="DuplicateActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
