--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAlarm">
-
+        <activity
+            android:name=".AddAlarmActivity"
+            android:exported="false" />
         <activity
             android:name=".TimerActivity"
             android:exported="false" />
