--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyAlarm">
         <activity
+            android:name=".JoinActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddAlarmActivity"
             android:exported="false" />
         <activity
